--- a/index.html
+++ b/index.html
@@ -187,6 +187,19 @@
   </header>
   <main class="md:container md:mx-auto">
 
+    <!-- featured bike section -->
+    <section class="my-28">
+      <h3 class=" font-semibold text-5xl pb-12 text-center">
+        Fetured Bikes In This Year
+      </h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16">
+        <img  class="filter grayscale" src="images/others/feature-bike.png" alt="">
+
+        <img src="images/others/feature-bike.png" alt="">
+
+        <img  class="filter grayscale" src="images/others/feature-bike.png" alt="">
+      </div>
+    </section>
 
     <!-- card secrion -->
     <section class="my-28">
@@ -194,7 +207,7 @@
         Latest News
       </h3>
 
-      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5" >
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
         <!-- card 1 -->
         <div class="card bg-base-100 shadow-xl">
           <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
@@ -254,7 +267,7 @@
         Happy <span class="text-bike-primary">Clients says</span>
       </h3>
 
-      <!-- card div -->
+      <!-- review div -->
       <div class="px-5 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
         <!-- review 1 -->
         <div class="card  bg-base-100 border-2 border-solid border-gray-300">
@@ -262,14 +275,14 @@
             <img src="images/others/user-1.png" alt="Shoes" class="rounded-xl " />
           </figure>
           <div class="card-body items-center text-center space-y-4 text-[#6C6C6C]">
-            <p>Slate helps you see how 
-              many more days you need 
-              to work to reach your financial 
+            <p>Slate helps you see how
+              many more days you need
+              to work to reach your financial
               goal for the month and year.
             </p>
             <div class="rating">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -284,14 +297,14 @@
             <img src="images/others/user-2.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4 text-[#6C6C6C]">
-            <p>Slate helps you see how 
-              many more days you need 
-              to work to reach your financial 
+            <p>Slate helps you see how
+              many more days you need
+              to work to reach your financial
               goal for the month and year.
             </p>
             <div class="rating">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -306,14 +319,14 @@
             <img src="images/others/user-3.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center space-y-4 text-[#6C6C6C]">
-            <p>Slate helps you see how 
-              many more days you need 
-              to work to reach your financial 
+            <p>Slate helps you see how
+              many more days you need
+              to work to reach your financial
               goal for the month and year.
             </p>
             <div class="rating">
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
-              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"  />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
               <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -324,9 +337,101 @@
         </div>
       </div>
     </section>
+
+    <!-- faq section -->
+    <section class="my-28">
+      <h3 class=" font-semibold text-5xl pb-12 text-center">
+        Frequently Asked <span class="text-bike-primary">Questions</span>
+      </h3>
+
+      <!-- question div -->
+      <div>
+        <div class="hero ">
+          <div class="hero-content flex-col gap-20 lg:flex-row">
+            <img src="images/others/faq.png" class="w-3/4 rounded-lg shadow-2xl" />
+            <div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should
+                  know about riding a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                    the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                    and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I need a
+                  new one?
+                </div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                    the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                    and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                    the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                    and legally compliant bike rider. </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                    the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused
+                    and legally compliant bike rider. </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
-</body class="md:container md:mx-auto">
+  <footer class="footer px-36 py-14 bg-neutral text-neutral-content flex flex-col lg:flex-row">
+    <aside>
+      <div class="flex gap-3">
+        <a href="">Download Now</a>
+        <a href="">License</a>
+      </div>
+      <div class="flex ">
+        <ul class="menu menu-horizontal text-base    ">
+          <li><a>About</a></li>
+          <li><a>Features</a></li>
+          <li><a>Pricing</a></li>
+          <li><a>Careers</a></li>
+          <li><a>Help</a></li>
+          <li><a>Privacy Policy</a></li>
+        </ul>
+      </div>
+      <p>© 2020 bike. All rights reserved</p>
+    </aside>
+    <nav class="lg:place-self-end">
+      <h6 class="footer-title">Get the App</h6>
+      <div class="grid grid-cols-1 gap-4">
+        <a> <img class="w-36" src="images/others/ios.png" alt=""> </a>
+        <a> <img class="w-36" src="images/others/android.png" alt=""> </a>
+        <a></a>
+      </div>
+    </nav>
+  </footer>
+
+</body>
 
 </html>
